--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node ./node_modules/mocha/bin/mocha.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.2",
-        "mongoose": "^6.9.0"
+        "mongoose": "^6.9.0",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "chai": "^4.3.7",
+        "chai-http": "^4.3.0",
+        "mocha": "^10.2.0"
     }
 }
